Improve appearance in "External monitoring tool"
Signed-off-by: Valdnet <47037905+Valdnet@users.noreply.github.com>

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,9 @@
 .monitoring-wrapper {
 	display: -webkit-flex;
 	display: flex;
+	position: left;
+	max-width: 50%;
+	min-width: 50%;
 }
 
 .monitoring-wrapper > input {
