--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,11 @@
 	background-color: var(--color-main-background);
 	border: 2px solid var(--color-border);
 	border-radius: var(--border-radius-large);
+}
 
-	&.cpuSection,
-	&.memorySection {
-		padding: 16px 0 0 0;
-	}
+.infobox.cpuSection,
+.infobox.memorySection {
+    padding: 16px 0 0 0;
 }
 
 .diskchart-container {
