feat(active users): add more active user statistics intervals and improve presentation
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/css/style.css
+++ b/css/style.css
@@ -259,3 +259,35 @@
 	align-items: center;
 	height: 24px;
 }
+
+.active-users-wrapper {
+	flex: 1;
+	display: flex;
+	gap: 0 1rem;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+}
+
+.active-users-box {
+	padding: 0.25rem 1rem;
+	flex: 1;
+	min-width: 150px;
+	border-left: 2px solid var(--color-border);
+}
+
+@media (width <= 1280px) {
+	.active-users-box {
+		padding: 1rem 0.5rem;
+		border: none;
+		text-align: center;
+	}
+}
+
+.active-users-box:first-child {
+	border: none;
+}
+
+.active-users-box .info {
+	font-size: 2rem;
+}
