--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,16 @@
 	margin-top: 0;
 }
 
-.rambox {
+.rambox, .cpubox {
 	height: 10px;
 	width: 10px;
-	background-color: #555;
+	background-color: var(--color-primary-element);
 }
 
 .swapbox {
 	height: 10px;
 	width: 10px;
-	background-color: #222;
+	background-color: var(--color-background-darker);
 }
 
 .info {
@@ -290,4 +290,19 @@
 
 .active-users-box .info {
 	font-size: 2rem;
+}
+
+.smoothie-chart-tooltip {
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: center;
+	padding: 16px;
+	margin: 0 0.25rem;
+	background-color: var(--color-main-background);
+	border: 2px solid var(--color-border);
+	border-radius: var(--border-radius-large);
+}
+
+.cpu-wrapper {
+	width: 100%;
 }
